[package]
name = "touche"
version = "0.0.11"
edition = "2021"
authors = ["Rodrigo Navarro <rnavarro@rnavarro.com.br>"]
license = "MIT"
description = "Synchronous HTTP library"
repository = "https://github.com/reu/touche"
categories = ["network-programming", "web-programming"]
keywords = ["web", "http", "protocol"]

[features]
default = ["server"]
full = ["client", "server"]
server = ["threadpool"]
unix-sockets = []
client = []

[package.metadata.docs.rs]
all-features = true

[dependencies]
headers = "0.4"
http = "1"
httparse = "1.9"
rustls = { version = "0.23", optional = true, default-features = false, features = ["std"] }
thiserror = "1.0.31"
threadpool = { version = "1.8.1", optional = true, default-features = false }

[dev-dependencies]
base64 = "0.13.0"
flate2 = "1.0.24"
futures = "0.3.28"
indoc = "1.0.6"
md5 = "0.7.0"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pki-types= "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43", features = ["full"] }
tokio-tungstenite = "0.26"
tungstenite = "0.26"
